syntax = "proto3";

package gen.pb;

option go_package = "github.com/paranoiachains/gophkeeper/gen/pb/keeper";

service Keeper {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string login = 1;
    string password = 2;
}

message RegisterResponse {
    string token = 1;
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    string token = 2;
}